<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_ros2_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Vasile.Holonec@analog.com">vholonec</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
